--- a/css/signup.css
+++ b/css/signup.css
@@ -23,8 +23,11 @@
 
 .fcontainer_outer{
     display: flex;
+/*    width: 90%;*/
     padding: 20px;
-    min-width:300px; 
+    width: 95%;
+    max-width: 600px;
+    min-width: 310px; 
     box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.8);
     background-color:rgba(255,0,0,0.13);
     border-radius: 15px;
@@ -47,12 +50,12 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    height: 80px;
+    height: 100px;
 /*     background-color: rgba(0,0,0,0.4);*/
     justify-content: center;
     padding-bottom: 10px;
     align-items: center;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
     border-bottom: 1px solid var(--pcolor);
 }
 .heading{
@@ -81,7 +84,7 @@
 .inner_container{
     display: flex;
     width: 100%;
-    padding: 15px;
+/*    padding: 15px;*/
 /*    padding: 10px;*/
 /*    background-color: green;*/
     flex-direction: column;
@@ -96,11 +99,13 @@
     justify-content: space-between;
     align-items: center;
 /*    flex-direction: column;*/
-    margin-bottom: 15px;
+    margin: 5px 0px;
 }
+
 .inner_container .caption{
     width: 100%;
-    margin-bottom: 3px;
+    line-height: 1.7em;
+/*    margin-bottom: 9px;*/
     display: flex;
     align-content: center;
 }
