--- a/css/email_page.css
+++ b/css/email_page.css
@@ -11,6 +11,7 @@ input{
     height: 2.4rem;
     padding: 8px 8px;
     font-size: 0.9rem;
+    width: 100%;
 }
 
 input:focus{
@@ -45,6 +46,7 @@ input:focus{
 
 
 .row{
+    margin-top: 30px;
     display: flex;
     width: 90%;
     max-width: 500px;
@@ -56,20 +58,15 @@ input:focus{
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 2.5em;
-    padding: 5px;
+    width: 2.4rem;
+    padding: 6px;
     background-color: var(--pcolor);
-    border-top-left-radius: 5px;
-    border-bottom-left-radius: 5px;
+    border-radius: 4px 0px 0px 4px;
 }
 
 .icon{
     width: 100%;
     height: 100%;
-}
-
-.w100{
-    width: 100%;
 }
 
 .button{
