--- a/css/index.css
+++ b/css/index.css
@@ -71,9 +71,9 @@
 
 .buttons_container{
     width: 100%;
-    height: 50px;
     display: flex;
     justify-content: space-between;
+    margin-bottom: 10px;
 /*    background-color: chartreuse;*/
 }
 .buttons_container a{
