--- a/css/password_reset.css
+++ b/css/password_reset.css
@@ -5,125 +5,63 @@
     --scolor:hsla(43,90%,50%,1);
 }
 
+input[type=text]{
+    border: 1px solid var(--pcolor);
+    border-radius: 4px;
+    height: 2.4rem;
+    padding: 8px 8px;
+    font-size: 0.9rem;
+    width: 100%;
+}
+
+input[type=text]:focus{
+     box-shadow:0px 0px 5px 0px var(--pcolor);
+     outline: 0px;
+}
+
 .body_section{
     position: relative;
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
     width: 100%;
     height: 550px;
-    padding-top: 60px;
-    padding-left: 20px;
-    padding-right: 20px;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
+    padding-top: 50px;
     justify-content: center;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
     align-items: center;
-    background-color: #fff;
 }
  
 
 .fcontainer{
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
     justify-content: center;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
     align-items: center;
     padding: 20px;
     width: 300px;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: column;
     flex-direction: column;
-    background-color: #fff;
-    border-radius: 5px;
-     -webkit-box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.6); 
-    box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.6);
+    border-radius: 20px;
+    box-shadow: 0px 0px 25px 0px rgba(0,0,0,0.4);
 }
  
 
 .fheader{
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: column;
-    flex-direction: column;
     width: 100%;
-    height: 60px;
-/*     background-color: rgba(0,0,0,0.4);*/
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
     justify-content: center;
-    padding-bottom: 10px;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
     align-items: center;
-/*    margin-bottom: 10px;*/
+    margin: 20px 0px;
 }
-.heading{
-/*    font-family: 'Staatliches', sans-serif;*/
-/*    text-transform: uppercase;*/
-}
-.heading p{
-/*    letter-spacing: 1px;*/
+
+.fheader p{
     font-weight: bold;
     margin: 0px;
     color: var(--pcolor);
-    padding: 0px;
 }
-
-
 
 .caption{
     width: 100%;
-    line-height: 1.7em;
-    font-size: 0.9em;
-/*    margin-bottom: 9px;*/
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-line-pack: center;
-    align-content: center;
+    line-height: 2rem;
 }
 
-.inner_container{
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    width: 100%;
-/*    padding: 15px;*/
-/*    padding: 10px;*/
-/*    background-color: green;*/
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: column;
-    flex-direction: column;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    justify-content: center;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-}
 
-.inner_container .textbox{
-    border: 1px solid var(--pcolor);
-    border-radius: 3px;
-    height: 2rem;
-    padding: 0px 8px;
-    font-size: 0.8rem;
-    background-color: rgba(0,0,0,0.0);
-    -webkit-box-shadow:inset 0px 0px 3px 0px rgba(0,0,0,0.5);
-    box-shadow:inset 0px 0px 3px 0px rgba(0,0,0,0.5);
-}
 
 .inner_container .textbox:focus{
     -webkit-box-shadow:0px 0px 8px 0px var(--pcolor);
